<resources>
  <string name="search_fragment_name">Search</string>
  <string name="title_hint">Title</string>
  <string name="description_hint">Description</string>
  <string name="details_fragment_label">Notes Details</string>
  <string name="camera_permission_explanation">If Permission to use camera is granted, images can be captured and attached to notes</string>
  <string name="capture_directory">captures</string>
  <string name="edit_note_description">Edit Note</string>
  <string name="add_photo_description">Add Photo</string>
  <string name="save_changes_description">Save changes</string>
  <string name="cancel_description">Cancel</string>
  <string name="add_player_description">Add Player to Team</string>
  <string name="sign_in_failure_message">Unable to sign in in with credentials</string>
  <string name="sign_out_title">Sign Out</string>
  <string name="babip">BABIP</string>
  <string name="batting_average">AVG</string>
  <string name="delta">DELTA</string>
  <string name="hard_hit_percentage">Hard Hit %</string>
  <string name="exit_velo">Exit Velocity</string>
</resources>